[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sidecar"
version = "0.1.0"
description = "AI Sidecar for OpenKore God-Tier AI System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI MMORPG Team", email = "team@ai-mmorpg.local"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["openkore", "ragnarok", "ai", "sidecar", "zeromq"]

dependencies = [
    "pyzmq>=25.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # Phase 8: Memory and Learning
    "redis>=5.0.0",
    "openai>=2.0.0",
    "anthropic>=0.75.0",
    "httpx>=0.28.0",
    # ML and Data Processing
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Azure OpenAI (optional but included for completeness)
    "azure-identity>=1.25.0",
    "azure-ai-openai>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.5",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-aiofiles>=23.2.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ai-sidecar = "ai_sidecar.main:main"

[project.urls]
Homepage = "https://github.com/ai-mmorpg/openkore-ai"
Documentation = "https://github.com/ai-mmorpg/openkore-ai/docs"
Repository = "https://github.com/ai-mmorpg/openkore-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_sidecar*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]

[tool.ruff.isort]
known-first-party = ["ai_sidecar"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "zmq.*",
    "structlog.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "ai_sidecar/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["ai_sidecar"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
    "*/.venv/*",
    "*/apply_all_fixes.py",
    "*/fix_all_170_failures.py",
    "*/test_deep_imports.py",
    "*/test_imports_11b.py",
    "*/test_phase11b.py",
    "*/test_phase11d.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
precision = 2
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"